--- a/resources/css/Articles.css
+++ b/resources/css/Articles.css
@@ -45,18 +45,21 @@
 }
 
 .toggle-btn {
-    background-color: transparent;
     border: none;
     cursor: pointer;
-    margin: 0.5vw 1.5vw 0 0;
-    height: 15px;
-    width: 15px;
+    margin: 0.3vw 1.5vw 0 0;
+    height: 20px;
+    width: 20px;
     top: 15px;
-    line-height: 7px;
+    line-height: 15px;
     position: relative;
     background-color: rgb(234, 234, 234);
-    padding: 0.2em;
+    padding: 0.1em;
     border-radius: 50%;
+}
+
+.toggle-btn:hover {
+    background-color: rgb(211, 211, 211);
 }
 
 .textWrapper {
